--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,4 +16,7 @@ features = [
     "Win32_Foundation",
     "Win32_System_SystemServices",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_System_LibraryLoader",
+    "Win32_System_Threading",
+    "Win32_Security",
 ]
