--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,4 +19,5 @@ features = [
     "Win32_System_LibraryLoader",
     "Win32_System_Threading",
     "Win32_Security",
+    "Win32_System_Console",
 ]
