--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ crate-type = ["cdylib"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build]
+target = "x86_64-pc-windows-msvc"
+
 [dependencies]
 
 [dependencies.windows]
