--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 target = "x86_64-pc-windows-msvc"
 
 [dependencies]
+highfleet = { path = "../highfleet" }
 serde = { version = "1.0.175", features = ["derive"] }
 serde_json = "1.0.103"
 
