--- a/ammo_extended/Cargo.toml
+++ b/ammo_extended/Cargo.toml
@@ -17,16 +17,11 @@ target = "x86_64-pc-windows-msvc"
 highfleet = { path = "../highfleet-rs" }
 serde = { version = "1.0.175", features = ["derive"] }
 serde_json = "1.0.103"
+log = "0.4.*"
 
 [dependencies.windows]
 version = "0.*"
 features = [
     "Win32_Foundation",
-    "Win32_System_SystemServices",
-    "Win32_UI_WindowsAndMessaging",
-    "Win32_System_LibraryLoader",
-    "Win32_System_Threading",
-    "Win32_Security",
-    "Win32_System_Console",
     "Win32_System_Memory",
 ]
